HIVE-29251: Hive ACID: HiveConf object shouldn't be shared between multiple cleanup tasks