@@ -45,7 +45,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -63,36 +62,45 @@ import static org.apache.hadoop.hive.metastore.conf.MetastoreConf.getTimeVar;
 public abstract class TaskHandler {
 
   private static final Logger LOG = LoggerFactory.getLogger(TaskHandler.class.getName());
+
   protected final TxnStore txnHandler;
-  protected final HiveConf conf;
+  private final ThreadLocal<HiveConf> threadLocalConf;
   protected final boolean metricsEnabled;
   protected final MetadataCache metadataCache;
   protected final FSRemover fsRemover;
   protected final long defaultRetention;
 
   TaskHandler(HiveConf conf, TxnStore txnHandler, MetadataCache metadataCache,
-                         boolean metricsEnabled, FSRemover fsRemover) {
-    this.conf = conf;
+        boolean metricsEnabled, FSRemover fsRemover) {
+    this.threadLocalConf = ThreadLocal.withInitial(() -> new HiveConf(conf));
     this.txnHandler = txnHandler;
     this.metadataCache = metadataCache;
     this.metricsEnabled = metricsEnabled;
     this.fsRemover = fsRemover;
-    this.defaultRetention = getTimeVar(conf, HIVE_COMPACTOR_CLEANER_RETRY_RETENTION_TIME, TimeUnit.MILLISECONDS);
+    this.defaultRetention = getTimeVar(conf,
+        HIVE_COMPACTOR_CLEANER_RETRY_RETENTION_TIME, TimeUnit.MILLISECONDS);
   }
 
   public abstract List<Runnable> getTasks() throws MetaException;
 
+  protected HiveConf getConf() {
+    return threadLocalConf.get();
+  }
+
   protected Table resolveTable(String dbName, String tableName) throws MetaException {
-    return CompactorUtil.resolveTable(conf, dbName, tableName);
+    return CompactorUtil.resolveTable(getConf(), dbName, tableName);
   }
 
   protected Partition resolvePartition(String dbName, String tableName, String partName) throws MetaException {
-    return CompactorUtil.resolvePartition(conf, null, dbName, tableName, partName, CompactorUtil.METADATA_FETCH_MODE.LOCAL);
+    return CompactorUtil.resolvePartition(
+        getConf(), null, dbName, tableName, partName, CompactorUtil.METADATA_FETCH_MODE.LOCAL);
   }
 
   protected ValidReaderWriteIdList getValidCleanerWriteIdList(CompactionInfo info, ValidTxnList validTxnList)
-          throws NoSuchTxnException, MetaException {
-    List<String> tblNames = Collections.singletonList(AcidUtils.getFullTableName(info.dbname, info.tableName));
+        throws NoSuchTxnException, MetaException {
+    List<String> tblNames = Collections.singletonList(
+        AcidUtils.getFullTableName(info.dbname, info.tableName));
+
     GetValidWriteIdsRequest request = new GetValidWriteIdsRequest(tblNames);
     request.setValidTxnList(validTxnList.writeToString());
     GetValidWriteIdsResponse rsp = txnHandler.getValidWriteIds(request);
@@ -101,19 +109,23 @@ public abstract class TaskHandler {
     // been some delta/base dirs
     assert rsp != null && rsp.getTblValidWriteIdsSize() == 1;
 
-    return new ValidCleanerWriteIdList(
-        TxnCommonUtils.createValidReaderWriteIdList(rsp.getTblValidWriteIds().get(0)));
+    ValidReaderWriteIdList validWriteIdList = TxnCommonUtils.createValidReaderWriteIdList(
+        rsp.getTblValidWriteIds().getFirst());
+    return new ValidCleanerWriteIdList(validWriteIdList);
   }
 
   protected boolean cleanAndVerifyObsoleteDirectories(CompactionInfo info, String location,
-                                                      ValidReaderWriteIdList validWriteIdList, Table table) throws MetaException, IOException {
+        ValidReaderWriteIdList validWriteIdList, Table table) throws MetaException, IOException {
     Path path = new Path(location);
-    FileSystem fs = path.getFileSystem(conf);
+    FileSystem fs = path.getFileSystem(getConf());
 
     // Collect all the files/dirs
     Map<Path, AcidUtils.HdfsDirSnapshot> dirSnapshots = AcidUtils.getHdfsDirSnapshotsForCleaner(fs, path);
-    AcidDirectory dir = AcidUtils.getAcidState(fs, path, conf, validWriteIdList, Ref.from(false), false,
-            dirSnapshots);
+
+    AcidDirectory dir = AcidUtils.getAcidState(
+        fs, path, getConf(), validWriteIdList, Ref.from(false), false,
+        dirSnapshots);
+
     boolean isDynPartAbort = CompactorUtil.isDynPartAbort(table, info.partName);
 
     List<Path> obsoleteDirs = CompactorUtil.getObsoleteDirs(dir, isDynPartAbort);
@@ -121,26 +133,35 @@ public abstract class TaskHandler {
       info.setWriteIds(dir.hasUncompactedAborts(), dir.getAbortedWriteIds());
     }
 
-    List<Path> deleted = fsRemover.clean(new CleanupRequest.CleanupRequestBuilder().setLocation(location)
-            .setDbName(info.dbname).setFullPartitionName(info.getFullPartitionName())
-            .setRunAs(info.runAs).setObsoleteDirs(obsoleteDirs).setPurge(true)
+    List<Path> deleted = fsRemover.clean(
+        new CleanupRequest.CleanupRequestBuilder()
+            .setLocation(location)
+            .setDbName(info.dbname)
+            .setFullPartitionName(info.getFullPartitionName())
+            .setRunAs(info.runAs)
+            .setObsoleteDirs(obsoleteDirs).setPurge(true)
             .build());
 
     if (!deleted.isEmpty()) {
-      AcidMetricService.updateMetricsFromCleaner(info.dbname, info.tableName, info.partName, dir.getObsolete(), conf,
-              txnHandler);
+      AcidMetricService.updateMetricsFromCleaner(
+          info.dbname, info.tableName, info.partName, dir.getObsolete(), getConf(),
+          txnHandler);
     }
 
     // Make sure there are no leftovers below the compacted watermark
     boolean success = false;
-    conf.set(ValidTxnList.VALID_TXNS_KEY, new ValidReadTxnList().toString());
-    dir = AcidUtils.getAcidState(fs, path, conf, new ValidCleanerWriteIdList(info.getFullTableName(), info.highestWriteId),
-            Ref.from(false), false, dirSnapshots);
+    getConf().set(ValidTxnList.VALID_TXNS_KEY, new ValidReadTxnList().toString());
+
+    dir = AcidUtils.getAcidState(
+        fs, path, getConf(),
+        new ValidCleanerWriteIdList(info.getFullTableName(), info.highestWriteId),
+        Ref.from(false), false,
+        dirSnapshots);
 
     List<Path> remained = subtract(CompactorUtil.getObsoleteDirs(dir, isDynPartAbort), deleted);
     if (!remained.isEmpty()) {
-      LOG.warn("Remained {} obsolete directories from {}. {}",
-              remained.size(), location, CompactorUtil.getDebugInfo(remained));
+      LOG.warn("Remained {} obsolete directories from {}. {}", remained.size(), location,
+          CompactorUtil.getDebugInfo(remained));
     } else {
       LOG.debug("All cleared below the watermark: {} from {}", info.highestWriteId, location);
       success = true;
@@ -160,7 +181,7 @@ public abstract class TaskHandler {
       if (info.retryRetention > 0) {
         cleanAttempts = (int) (Math.log(info.retryRetention / defaultRetention) / Math.log(2)) + 1;
       }
-      if (cleanAttempts >= getIntVar(conf, HIVE_COMPACTOR_CLEANER_MAX_RETRY_ATTEMPTS)) {
+      if (cleanAttempts >= getIntVar(getConf(), HIVE_COMPACTOR_CLEANER_MAX_RETRY_ATTEMPTS)) {
         //Mark it as failed if the max attempt threshold is reached.
         txnHandler.markFailed(info);
       } else {
